--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <img src="/img/Logo.png" alt="logo">
+        <img src="img/Logo.png" alt="logo">
         <ul>
             <li>Home</li>
             <li>Ranking</li>
@@ -21,7 +21,7 @@
     </header>
     <main>
         <div class="card1">
-            <img src="/img/delivery.jpg" alt="foto">
+            <img src="img/delivery.jpg" alt="foto">
             <h1>Envio gratis <span>comprando</span> 2 pizzas</h1>
         </div>
         <div class="card2">
@@ -38,12 +38,12 @@
                     </ol>
 
                 
-                <img src="/img/PizzaFalling.jpg" alt="">
+                <img src="img/PizzaFalling.jpg" alt="">
             </div>
         </div>
     </main>
     <footer>
-        <img src="/img/Logo.png" alt="logo">
+        <img src="img/Logo.png" alt="logo">
         <ul>
             <li>Home</li>
             <li>Ranking</li>
